--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.websystique.springmvc</groupId>
+	<groupId>com.erni.drools</groupId>
 	<artifactId>GeneraliDroolsPOC</artifactId>
 	<packaging>war</packaging>
 	<version>1.0.0</version>
@@ -11,6 +11,7 @@
 
 	<properties>
 		<springframework.version>4.0.6.RELEASE</springframework.version>
+		<drools.version>5.4.0.Final</drools.version>
 	</properties>
 
 	<dependencies>
@@ -40,5 +41,42 @@
 
 	<build>
 		<finalName>GeneraliDroolsPOC</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
+                    <execution>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>com.sample.app.Test2</mainClass>
+
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
 	</build>
+
+    <repositories>
+        <repository>
+            <id>jboss</id>
+            <name>jboss</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
 </project>
