--- a/pom.xml
+++ b/pom.xml
@@ -11,17 +11,17 @@
 
 	<properties>
 		<springframework.version>4.0.6.RELEASE</springframework.version>
-		<drools.version>5.4.0.Final</drools.version>
-        <jbpm5.version>5.4.0.Final</jbpm5.version>
+		<drools.version>6.2.0.Final</drools.version>
+        <jbpm5.version>6.2.0.Final</jbpm5.version>
 	</properties>
-
+        <!--<drools.version>6.2.0.Final</drools.version>
+        <jbpm.version>6.2.0.Final</jbpm.version> -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${springframework.version}</version>
 		</dependency>
-
 		<!-- Below declared dependencies are included for the servers who may complain about servlet/jstl missing dependency -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -38,8 +38,6 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
-
-
         <dependency>
             <groupId>org.jbpm</groupId>
             <artifactId>jbpm-flow</artifactId>
@@ -54,6 +52,26 @@
             <groupId>org.jbpm</groupId>
             <artifactId>jbpm-flow-builder</artifactId>
             <version>${jbpm5.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>knowledge-api</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-core</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.drools</groupId>
+            <artifactId>drools-compiler</artifactId>
+            <version>${drools.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>19.0</version>
         </dependency>
 	</dependencies>
 
